<resources>
    <string name="app_name">TeaBuddy</string>
    <string name="home">Home</string>
    <string name="encyclopedia">Encyclopedia</string>
    <string name="teaInfo">Tea Information</string>
    <string name="teatimer">Tea Timer</string>
    <string name="user">User</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="set">Set</string>
    <string name="tea_buddy">Tea Buddy</string>
    <string name="tea_buddy_world">Tea World</string>
    <string name="builtBy">Built by Will and Jane</string>
    <string name="signOut">Sign Out</string>
    <string name="signIn">Sign In</string>
    <string name="home_recommended">Recommended</string>
    <string name="home_favourites">Favourites</string>
    <string name="home_welcome">Welcome Tea Lover!</string>
    <string name="home_brew">Pick your brew</string>
    <string name="timer_text">Let\'s start brewing!</string>
    <!--    dialogues-->
    <string name="notLoggedIn">Please Log In to access TeaWorld</string>

</resources>
