<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/karla"
        android:text="@string/home_welcome"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        app:layout_constraintLeft_toLeftOf="@id/welcomeText"
        android:text="@string/home_brew"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:fontFamily="@font/karla"
        android:textStyle="bold"
        android:id="@+id/tea_title"
        />

    <View
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/linebreak1"
        app:layout_constraintTop_toBottomOf="@id/tea_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gold"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/karla"
        android:layout_marginTop="20dp"
        android:text="@string/home_favourites"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/tea_title"
        app:layout_constraintTop_toBottomOf="@id/linebreak1"
        android:textStyle="bold"
        android:id="@+id/favourite_title"
        />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favouritesRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/favourite_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/cell_tea_item" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/karla"
        android:layout_marginTop="20dp"
        android:text="@string/home_recommended"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/tea_title"
        app:layout_constraintTop_toBottomOf="@id/favouritesRecyclerView"
        android:textStyle="bold"
        android:id="@+id/recommended_title"

        />
    <FrameLayout
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recommended_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/cell_tea_item" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
