<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:clickable="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teatimer"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/timerTitle"
        android:textStyle="bold"
        />

    <LinearLayout
        android:id="@+id/timerText"
        android:layout_margin="20dp"
        android:padding="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/lightGreen"
        app:layout_constraintTop_toBottomOf="@id/timerTitle">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="90sp"
            android:id="@+id/timerMin"
            android:layout_margin="10dp"
            />


        <TextView
            android:id="@+id/colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textSize="90sp" />

        <TextView
            android:id="@+id/timerSec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="90sp"
            android:layout_margin="10dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/startTimer"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/darkGreen"
        android:fontFamily="@font/font"
        android:text="@string/start"
        android:textColor="@color/lightGreen"
        android:layout_margin="40dp"
        app:layout_constraintTop_toBottomOf="@id/timerText"
        app:layout_constraintRight_toLeftOf="@id/stopTimer"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/stopTimer"
        android:layout_margin="40dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/darkGreen"
        android:fontFamily="@font/font"
        android:text="@string/stop"
        android:textColor="@color/lightGreen"
        app:layout_constraintLeft_toRightOf="@id/startTimer"
        app:layout_constraintTop_toBottomOf="@id/timerText"
        app:layout_constraintRight_toLeftOf="@id/openSetTimer"
        android:textStyle="bold"
        android:textSize="16sp"
        />
    <Button
        android:id="@+id/openSetTimer"
        android:layout_margin="40dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/darkGreen"
        android:fontFamily="@font/font"
        android:text="Set"
        android:textColor="@color/lightGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timerText"

        android:textStyle="bold"
        android:textSize="16sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>